# xp-md2html

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  test.yml
src/: lib.rs  main.rs
src/mime/: mapping.rs  mod.rs  reversed.rs
src/render/: mod.rs  with_chrome.rs  x.py
tests/: README.md  integration.rs
tests/fixtures/: simple.html  simple_test.html  styled.html
tests/integration/: golden_master_tests.rs
