[package]
name = "xp-md2html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "xpmd"
path = "src/bin/xpmd.rs"

[dependencies]
anyhow = "1.0.97"
markdown = "1.0.0-alpha.16"
tempfile = "3.8"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
